--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "@fancyapps/ui": "^5.0.17",
     "@qpokychuk/fonts": "^1.0.8",
     "@qpokychuk/ripple": "^1.5.6",
+    "@types/curtainsjs": "^8.1.0",
+    "curtainsjs": "^8.1.5",
     "dotenv-webpack": "^8.0.1",
     "gsap": "^3.12.2",
     "js-cookie": "^3.0.5",
