--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,7 @@
     "tailwind.config.js",
     "postcss.config.js",
     "tailwind.form.js",
+    "tailwind.input.js",
     "tailwind.button.js"
   ],
   "overrides": [],
