--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@typescript-eslint/parser": "^5.59.6",
     "autoprefixer": "^10.4.4",
     "babel-loader": "^8.2.2",
+    "babel-plugin-transform-custom-element-classes": "^0.1.0",
+    "babel-plugin-transform-es2015-classes": "^6.24.1",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
     "eslint": "^8.40.0",
@@ -43,8 +45,8 @@
     "stylelint-order": "^6.0.3",
     "stylelint-scss": "^5.0.0",
     "tailwindcss": "^3.2.7",
-    "ts-loader": "^9.3.1",
-    "typescript": "^4.7.4",
+    "ts-loader": "^9.5.0",
+    "typescript": "^4.9.5",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
